item.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: item
  template:
    metadata:
      labels:
        app: item
    spec:
      containers:
        - image: rkwoals524/item:v1
          name: item
          # labels:
          #   app: item
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: item-service
spec:
  selector:
    app: item
  # type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      # nodePort: 30010
