order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - image: rkwoals524/order:v1
          name: order
          # labels:
          #   app: order
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  # type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      # nodePort: 30020
