pay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pay
  template:
    metadata:
      labels:
        app: pay
    spec:
      containers:
        - image: rkwoals524/pay:v1
          name: pay
          # labels:
          #   app: pay
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pay-service
spec:
  selector:
    app: pay
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30100
